MOD HTTP/HTTPSプロキシ情報をビルド引数として取得していなかったため修正

--- a/ap/Dockerfile
+++ b/ap/Dockerfile
@@ -10,13 +10,15 @@ ARG arg_jdbc_file_name
 ARG arg_jdbc_download_url
 ARG arg_im_java_home
 ARG arg_resin_home
+ARG arg_http_proxy
+ARG arg_https_proxy
 
 # 環境変数にHTTPプロキシ情報を設定する
 # 定義: ./ap/.env HTTP_PROXY
-ENV http_proxy=$arg_http_proxy
-ENV HTTP_PROXY=$arg_http_proxy
-ENV https_proxy=$arg_https_proxy
-ENV HTTPS_PROXY=$arg_https_proxy
+ENV http_proxy="${arg_http_proxy}"
+ENV HTTP_PROXY="${arg_http_proxy}"
+ENV https_proxy="${arg_https_proxy}"
+ENV HTTPS_PROXY="${arg_https_proxy}"
 
 # resinサーバー名称を設定
 ENV RESIN_SERVER_NAME="${arg_resin_server_name}"
